Add ViewFoodItemActivity to view individual diary entries

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddFoodItemActivity"></activity>
+        <activity android:name=".AddFoodItemActivity" />
+        <activity android:name=".ViewFoodItemActivity"></activity>
     </application>
 
 </manifest>
