Sort by the month of March

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddFoodItemActivity" />
-        <activity android:name=".ViewFoodItemActivity"></activity>
+        <activity android:name=".ViewFoodItemActivity" />
+        <activity android:name=".MonthlyActivity"></activity>
     </application>
 
 </manifest>
